# oneMKL

./: CMakeLists.txt
examples/spblas/: CMakeLists.txt
examples/spblas/compile_time_dispatching/: CMakeLists.txt  gemv.cpp
examples/spblas/run_time_dispatching/: CMakeLists.txt  gemv.cpp
include/oneapi/mkl/: spblas.hpp  types.hpp
include/oneapi/mkl/detail/: backends_table.hpp
include/oneapi/mkl/spblas/: predicates.hpp  types.hpp
include/oneapi/mkl/spblas/detail/: onemkl_spblas_backends.hxx  spblas_ct.hxx  spblas_ct_asdf.hpp  spblas_loader.hpp  spblas_rt.hpp
include/oneapi/mkl/spblas/detail/mklcpu/: onemkl_spblas_mklcpu.hpp  spblas_ct.hpp
include/oneapi/mkl/spblas/detail/mklgpu/: onemkl_spblas_mklgpu.hpp  spblas_ct.hpp
src/spblas/: #spblas_loader.cpp#  CMakeLists.txt  function_table.hpp  spblas_loader.cpp
src/spblas/backends/: CMakeLists.txt  backend_wrappers.cxx
src/spblas/backends/mkl_common/: #mkl_spblas.cxx#  mkl_spblas.cxx  mkl_spblas_backend.hpp  sbplas_wrappers.cxx  spblas_wrappers.cxx
src/spblas/backends/mklcpu/: CMakeLists.txt  mkl_spblas_backend.hpp  mklcpu_gemv.cpp  mklcpu_spblas.cpp  mklcpu_wrappers.cpp
src/spblas/backends/mklgpu/: CMakeLists.txt  mklgpu_gemv.cpp  mklgpu_spblas.cpp  mklgpu_wrappers.cpp
tests/unit_tests/: CMakeLists.txt  main_test.cpp
tests/unit_tests/spblas/: CMakeLists.txt  gemv.cpp  init_matrix_handle.cpp  set_csr_data.cpp
